# xlang

src/tool/: CMakeLists.txt
src/tool/swiftcodegen_poc/: CMakeLists.txt  code_writers.h  main.cpp  metadata_cache.cpp  pch.h  readme.md  strings.cpp  strings.h  swift_writer.cpp  swift_writer.h  type_banners.h  types.cpp  types.h
